[gd_scene load_steps=11 format=3 uid="uid://b3dwgpo3xkmpd"]

[ext_resource type="Script" path="res://script/chapters_selection.gd" id="1_isrpi"]
[ext_resource type="Texture2D" uid="uid://copd4i4xqjiwv" path="res://resources/background/settings_bg.svg" id="1_up845"]
[ext_resource type="Texture2D" uid="uid://b3ak1svtyb2ai" path="res://resources/svg/Buttons/Square/Settings/settings.png" id="3_qlydm"]
[ext_resource type="Texture2D" uid="uid://bmknhgwb36y52" path="res://resources/svg/Buttons/Square/Settings/settings_hover.png" id="4_35b5x"]
[ext_resource type="FontFile" uid="uid://c2iu4eowycoxp" path="res://resources/font/Bungee/Bungee-Regular.ttf" id="5_5owiw"]
[ext_resource type="Texture2D" uid="uid://ddp7ccypqeptl" path="res://resources/svg/Buttons/Square/Cross/cross.png" id="5_gmpmu"]
[ext_resource type="Texture2D" uid="uid://b3a34xecqal02" path="res://resources/chapterImages/chapter1img.png" id="6_sst5g"]
[ext_resource type="Texture2D" uid="uid://bjv66ma4qhqm" path="res://resources/svg/Buttons/Square/Cross/cross_hover.png" id="6_wpkta"]
[ext_resource type="Texture2D" uid="uid://3cc5015rsdq1" path="res://resources/chapterImages/chapter2img.png" id="7_tif53"]
[ext_resource type="Texture2D" uid="uid://lf5e68srctih" path="res://resources/chapterImages/chapter3img.png" id="8_x4uxa"]

[node name="ChaptersSelection" type="Node2D"]
script = ExtResource("1_isrpi")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="BackgroundControl" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/BackgroundControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_up845")

[node name="HeadBarControl" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2

[node name="HeadBar" type="ColorRect" parent="CanvasLayer/HeadBarControl"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 200.0
grow_horizontal = 2
color = Color(0.447059, 0.34902, 0.321569, 1)

[node name="SettingsButtonControl" type="Control" parent="CanvasLayer/HeadBarControl/HeadBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SettingButton" type="TextureButton" parent="CanvasLayer/HeadBarControl/HeadBar/SettingsButtonControl"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 48.0
offset_top = -82.0
offset_right = 100.0
offset_bottom = -28.0
grow_vertical = 2
scale = Vector2(3, 3)
texture_normal = ExtResource("3_qlydm")
texture_pressed = ExtResource("4_35b5x")

[node name="BackButtonControl" type="Control" parent="CanvasLayer/HeadBarControl/HeadBar"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0
metadata/_edit_use_anchors_ = true

[node name="CloseButton" type="TextureButton" parent="CanvasLayer/HeadBarControl/HeadBar/BackButtonControl"]
layout_mode = 1
anchors_preset = -1
anchor_left = -2.012
anchor_top = 2.512
anchor_right = -2.012
anchor_bottom = 2.512
offset_left = -72.52
offset_top = -72.48
offset_right = -22.52
offset_bottom = -22.48
scale = Vector2(2.9, 2.9)
texture_normal = ExtResource("5_gmpmu")
texture_hover = ExtResource("6_wpkta")
metadata/_edit_use_anchors_ = true

[node name="ChapterOneTextControl" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer/ChapterOneTextControl"]
layout_mode = 1
anchors_preset = -1
anchor_left = -4.862
anchor_top = -13.3
anchor_right = -4.862
anchor_bottom = -13.3
offset_left = -170.52
offset_top = -88.0
offset_right = 170.48
offset_bottom = -8.0
theme_override_fonts/font = ExtResource("5_5owiw")
theme_override_font_sizes/font_size = 60
text = "INTRODUCTION	"

[node name="ChapterTwoTextControl" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer/ChapterTwoTextControl"]
layout_mode = 1
anchors_preset = -1
anchor_left = -4.862
anchor_top = -13.3
anchor_right = -4.862
anchor_bottom = -13.3
offset_left = -170.52
offset_top = 357.0
offset_right = 172.48
offset_bottom = 437.0
theme_override_fonts/font = ExtResource("5_5owiw")
theme_override_font_sizes/font_size = 60
text = "CHAPTER 1
"

[node name="ChapterThreeTextControl" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer/ChapterThreeTextControl"]
layout_mode = 1
anchors_preset = -1
anchor_left = -4.862
anchor_top = -13.3
anchor_right = -4.862
anchor_bottom = -13.3
offset_left = -170.52
offset_top = 797.0
offset_right = 172.48
offset_bottom = 877.0
theme_override_fonts/font = ExtResource("5_5owiw")
theme_override_font_sizes/font_size = 60
text = "CHAPTER 2"

[node name="ChapterOneImgControl" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="ChapterOneImage" type="TextureRect" parent="CanvasLayer/ChapterOneImgControl"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = -8.575
anchor_right = 0.5
anchor_bottom = -8.575
offset_left = -225.0
offset_top = -104.0
offset_right = 165.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
pivot_offset = Vector2(200, 60)
texture = ExtResource("6_sst5g")

[node name="ChapterOneButton" type="Button" parent="CanvasLayer/ChapterOneImgControl/ChapterOneImage"]
layout_mode = 0
offset_right = 392.0
offset_bottom = 146.0
flat = true

[node name="ChapterTwoImgControl" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="ChapterTwoImage" type="TextureRect" parent="CanvasLayer/ChapterTwoImgControl"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = -8.575
anchor_right = 0.5
anchor_bottom = -8.575
offset_left = -360.0
offset_top = 291.0
offset_right = 289.0
offset_bottom = 542.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.2, 1.2)
pivot_offset = Vector2(320, 106)
texture = ExtResource("7_tif53")

[node name="ChapterTwoButton" type="Button" parent="CanvasLayer/ChapterTwoImgControl/ChapterTwoImage"]
layout_mode = 0
offset_right = 649.0
offset_bottom = 252.0
flat = true

[node name="ChapterThreeImgControl" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="ChapterThreeImage" type="TextureRect" parent="CanvasLayer/ChapterThreeImgControl"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = -8.575
anchor_right = 0.5
anchor_bottom = -8.575
offset_left = -358.0
offset_top = 721.0
offset_right = 291.0
offset_bottom = 972.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.2, 1.2)
pivot_offset = Vector2(320, 106)
texture = ExtResource("8_x4uxa")

[node name="ChapterThreeButton" type="Button" parent="CanvasLayer/ChapterThreeImgControl/ChapterThreeImage"]
layout_mode = 0
offset_right = 648.0
offset_bottom = 252.0
flat = true

[connection signal="pressed" from="CanvasLayer/HeadBarControl/HeadBar/SettingsButtonControl/SettingButton" to="." method="_on_setting_button_pressed"]
[connection signal="pressed" from="CanvasLayer/HeadBarControl/HeadBar/BackButtonControl/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="CanvasLayer/ChapterOneImgControl/ChapterOneImage/ChapterOneButton" to="." method="_on_chapter_one_button_pressed"]
[connection signal="pressed" from="CanvasLayer/ChapterTwoImgControl/ChapterTwoImage/ChapterTwoButton" to="." method="_on_chapter_two_button_pressed"]
[connection signal="pressed" from="CanvasLayer/ChapterThreeImgControl/ChapterThreeImage/ChapterThreeButton" to="." method="_on_chapter_three_button_pressed"]
